--- a/index.html
+++ b/index.html
@@ -2180,6 +2180,20 @@ textarea.form-input::-webkit-resizer { display: none; }
 
           </ul>
 
+	<a href="https://ishubh-10.github.io/Login-page/" style="text-decoration: none;">
+		<button id="loginButton" style="
+		    position: fixed;
+		    bottom: 20px;
+		    right: 20px;
+		    padding: 15px 25px;
+		    background-color: #007bff;
+		    color: white;
+		    border: none;
+		    border-radius: 5px;
+		    cursor: pointer;>
+		Login
+		</button></a>
+
         </section>
 
 
@@ -3244,18 +3258,6 @@ for (let i = 0; i < navigationLinks.length; i++) {
   });
 }
 </script>
-
-<a href="https://ishubh-10.github.io/Login-page/" style="text-decoration: none;">
-<button id="loginButton" style="
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    padding: 15px 25px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;>Login</button></a>
 
 
 </body>
