--- a/index.html
+++ b/index.html
@@ -2190,9 +2190,10 @@ textarea.form-input::-webkit-resizer { display: none; }
 		    color: white;
 		    border: none;
 		    border-radius: 5px;
-		    cursor: pointer;>
-		Login
-		</button></a>
+		    cursor: pointer;">
+		    Login
+		</button>
+		</a>
 
         </section>
 
