--- a/index.html
+++ b/index.html
@@ -2184,13 +2184,15 @@ textarea.form-input::-webkit-resizer { display: none; }
 		<button id="loginButton" style="
 		    position: fixed;
 		    bottom: 20px;
-		    right: 20px;
+		    height: 10px;
+		    width: 10px;
+		    right: 40px;
 		    padding: 15px 25px;
 		    background-color: #007bff;
 		    color: white;
 		    border: none;
 		    border-radius: 5px;
-		    cursor: pointer;">
+		    cursor: pointer;>
 		    Login
 		</button>
 		</a>
@@ -2202,7 +2204,7 @@ textarea.form-input::-webkit-resizer { display: none; }
           - testimonials
         -->
 
-        <!--<section class="testimonials">
+        <!-- <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -2288,14 +2290,14 @@ textarea.form-input::-webkit-resizer { display: none; }
 
           </ul>
 
-        </section>-->
+        </section> -->
 
 
         <!--
           - testimonials modal
         -->
 
-        <div class="modal-container" data-modal-container>
+       <!-- <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -2329,7 +2331,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
           </section>
 
-        </div>
+        </div> -->
 
 
         <!--
