--- a/index.html
+++ b/index.html
@@ -2102,7 +2102,7 @@ textarea.form-input::-webkit-resizer { display: none; }
           </p>
 
           <p>
-              Over 1.7 years of experience building applications with React.js and modern UI frameworks.<br>
+              Over year of experience building applications with React.js and modern UI frameworks.<br>
               Monitored team progress and provided technical support, resolving tickets efficiently.<br>
               Conducted code reviews, proposing optimized solutions to enhance development efficiency and performance.<br>
               Utilized React.js, JavaScript, and Material UI to customize user interfaces.<br>
