--- a/index.html
+++ b/index.html
@@ -2206,7 +2206,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
         <!-- <section class="testimonials">
 
-          <h3 class="h3 testimonials-title">Testimonials</h3>
+        <!--  <h3 class="h3 testimonials-title">Testimonials</h3>
 
           <ul class="testimonials-list has-scrollbar">
 
@@ -2288,7 +2288,7 @@ textarea.form-input::-webkit-resizer { display: none; }
               </div>
             </li> 
 
-          </ul>
+          </ul> -->
 
         </section> -->
 
