--- a/index.html
+++ b/index.html
@@ -2180,7 +2180,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
           </ul>
 
-	<a href="https://ishubh-10.github.io/Login-page/" style="text-decoration: none;">
+	<a href="https://ishubh-10.github.io/Login-page/" style="text-decoration: none;">Login
 		<button id="loginButton" style="
 		    position: fixed;
 		    bottom: 20px;
@@ -2193,7 +2193,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 		    border: none;
 		    border-radius: 5px;
 		    cursor: pointer;>
-		    Login
+		    
 		</button>
 		</a>
 
