--- a/index.html
+++ b/index.html
@@ -2290,7 +2290,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
           </ul> -->
 
-        </section> -->
+        </section>
 
 
         <!--
