--- a/index.html
+++ b/index.html
@@ -2206,7 +2206,7 @@ textarea.form-input::-webkit-resizer { display: none; }
           - testimonials
         -->
 
-        <!-- <section class="testimonials">
+	<section class="testimonials">
 
         <!--  <h3 class="h3 testimonials-title">Testimonials</h3>
 
