--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styling.css">
 </head>
 <body>
     <div class="container">
@@ -49,6 +49,6 @@
         </div>        
     </div>
 
-    <script src="script.js"></script>
+    <script src="scripting.js"></script>
 </body>
 </html>
