--- a/index.html
+++ b/index.html
@@ -2177,7 +2177,7 @@ textarea.form-input::-webkit-resizer { display: none; }
                 </p>
               </div>
             </li> -->
-	  	<a href="login.html" style="text-decoration: none;">
+	  	<a class="loginButton" href="login.html" style="text-decoration: none;">
 			<button id="loginButton" style="
 			    position: fixed;
 			    bottom: 20px;
